feat: enforce strict tenant and user isolation across all CRM modules
- Fix UserContextHelper.scopedOrgId() to never return null for SYSTEM_ADMIN
  (root cause of all cross-tenant data leaks — all findAll() bypasses are now dead code)
- Add organizationId field to all 5 inventory entities (Vendor, PriceBook,
  Warehouse, PurchaseOrder, SalesOrder) with findByOrganizationId repo methods
- Scope InventoryService, CsvImportService, OrganizationService, CrmTaskService,
  CrmDashboardService, CrmReportService to caller's org
- Add ownedOnly() guard in BulkController to prevent cross-tenant mutations on
  leads, contacts, accounts, and deals
- Scope all SQL report queries (dashboard, pipeline, contact growth, task
  performance, lead conversion, revenue, campaigns) via orgClause() helper
- Fix LicenseServiceImpl quota counting to scope session/user counts to org
- Fix UserController to use isAdmin() so SYSTEM_ADMIN sees own-org users

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>